cmake_minimum_required(VERSION 3.10)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

include_directories(src)
include_directories(src/diceparser)
include_directories(src/diceparser/include)
include_directories(src/charactersheet)
include_directories(src/widgets/MRichTextEditor)

set(QT_REQUIRED_VERSION "5.15.0")
find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED COMPONENTS Core Widgets Gui Svg Network Multimedia PrintSupport Qml Quick QuickWidgets QuickControls2 Xml WebEngineWidgets Concurrent)
find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG COMPONENTS PdfWidgets)

if(TESTS)
    find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED COMPONENTS Test)
endif()

if(Qt5PdfWidgets_FOUND AND ${WITH_PDF})
    set(HAS_PDF TRUE PARENT_SCOPE)
    message("Enable PDF feature")
    add_definitions(-DWITH_PDF=1)

    set(pdfHeader
        src/controller/view_controller/pdfcontroller.h
        src/controller/media_controller/pdfmediacontroller.h
        src/pdfviewer/pdfviewer.h)

    set(pdfSource
        src/pdfviewer/pdfviewer.cpp
        src/controller/media_controller/pdfmediacontroller.cpp
        src/controller/view_controller/pdfcontroller.cpp)

    set(pdfUiFiles src/pdfviewer/pdfviewer.ui)
endif()



set(HEADERS
    src/controller/gamecontroller.h
    src/controller/resourcescontroller.h
    src/controller/networkcontroller.h
    src/controller/playercontroller.h
    src/controller/controllerinterface.h
    src/controller/preferencescontroller.h
    src/controller/instantmessagingcontroller.h
    src/controller/view_controller/imagecontroller.h
    src/controller/view_controller/mediacontrollerbase.h
    src/controller/view_controller/vectorialmapcontroller.h
    src/controller/view_controller/charactersheetcontroller.h
    src/controller/view_controller/webpagecontroller.h
    src/controller/view_controller/sharednotecontroller.h
    src/controller/view_controller/notecontroller.h
    src/controller/media_controller/mediamanagerbase.h
    src/controller/media_controller/charactersheetmediacontroller.h
    src/controller/media_controller/vectorialmapmediacontroller.h
    src/controller/media_controller/webpagemediacontroller.h
    src/controller/media_controller/notemediacontroller.h
    src/controller/media_controller/imagemediacontroller.h
    src/controller/media_controller/sharednotemediacontroller.h
    src/qmlchat/instantmessagingmodel.h
    src/qmlchat/messageinterface.h
    src/controller/contentcontroller.h
    src/common/controller/theme.h
    src/undoCmd/addlocalcharactercommand.h
    src/undoCmd/removelocalcharactercommand.h
    src/media/mediatype.h
    src/media/charactersheetwindow.h
    src/audio/audioPlayer.h
    src/audio/musicmodel.h
    src/audio/playerwidget.h
    src/model/profilemodel.h
    src/model/charactermodel.h
    src/model/thememodel.h
    src/charactersheet/charactersheet.h
    src/charactersheet/charactersheetitem.h
    src/charactersheet/charactersheetmodel.h
    src/charactersheet/csitem.h
    src/charactersheet/field.h
    src/charactersheet/formula/formulamanager.h
    src/charactersheet/formula/nodes/formulanode.h
    src/charactersheet/formula/nodes/operator.h
    src/charactersheet/formula/nodes/parenthesesfnode.h
    src/charactersheet/formula/nodes/scalaroperatorfnode.h
    src/charactersheet/formula/nodes/startnode.h
    src/charactersheet/formula/nodes/valuefnode.h
    src/charactersheet/formula/parsingtoolformula.h
    src/charactersheet/imagemodel.h
    src/charactersheet/propertyhelpers.h
    src/charactersheet/qqmlhelpers.h
    src/charactersheet/rolisteamimageprovider.h
    src/charactersheet/section.h
    src/charactersheet/sheetwidget.h
    src/charactersheet/tablefield.h
    src/qmlchat/chatroom.h
    src/qmlchat/messagemodel.h
    src/qmlchat/textmessage.h
    src/qmlchat/messagefactory.h
    src/qmlchat/dicemessage.h
    src/qmlchat/filteredplayermodel.h
    src/qmlchat/filterinstantmessagingmodel.h
    src/qmlchat/instantmessagingview.h
    src/qmlchat/avatarprovider.h
    src/qmlchat/textwritercontroller.h
    src/qmlchat/chatroomfactory.h
    src/qmlchat/chatroomsplittermodel.h
    src/common/controller/logcontroller.h
    src/common/controller/remotelogcontroller.h
    src/common/task/uploadlogtoserver.h
    src/common/widgets/colorbutton.h
    src/common/widgets/logpanel.h
    src/data/features.h
    src/data/chapter.h
    src/data/character.h
    src/data/characterstate.h
    src/data/charactervision.h
    src/data/cleveruri.h
    src/data/cleverurimimedata.h
    src/data/diceshortcut.h
    src/data/localpersonmodel.h
    src/data/mediacontainer.h
    src/data/person.h
    src/data/player.h
    src/data/resourcesnode.h
    src/data/shortcutmodel.h
    src/data/shortcutvisitor.h
    src/diceparser/booleancondition.h
    src/diceparser/cli/displaytoolbox.h
    src/diceparser/compositevalidator.h
    src/diceparser/diceroller.h
    src/diceparser/die.h
    src/diceparser/include/dicealias.h
    src/diceparser/include/diceparser.h
    src/diceparser/include/diceparserhelper.h
    src/diceparser/include/highlightdice.h
    src/diceparser/include/parsingtoolbox.h
    src/diceparser/node/bind.h
    src/diceparser/node/countexecutenode.h
    src/diceparser/node/dicerollernode.h
    src/diceparser/node/executionnode.h
    src/diceparser/node/explodedicenode.h
    src/diceparser/node/filternode.h
    src/diceparser/node/forloopnode.h
    src/diceparser/node/groupnode.h
    src/diceparser/node/helpnode.h
    src/diceparser/node/ifnode.h
    src/diceparser/node/jumpbackwardnode.h
    src/diceparser/node/keepdiceexecnode.h
    src/diceparser/node/listaliasnode.h
    src/diceparser/node/listsetrollnode.h
    src/diceparser/node/allsamenode.h
    src/diceparser/node/mergenode.h
    src/diceparser/node/numbernode.h
    src/diceparser/node/occurencecountnode.h
    src/diceparser/node/paintnode.h
    src/diceparser/node/parenthesesnode.h
    src/diceparser/node/rerolldicenode.h
    src/diceparser/node/scalaroperatornode.h
    src/diceparser/node/sortresult.h
    src/diceparser/node/splitnode.h
    src/diceparser/node/startingnode.h
    src/diceparser/node/stringnode.h
    src/diceparser/node/uniquenode.h
    src/diceparser/node/valueslistnode.h
    src/diceparser/node/repeaternode.h
    src/diceparser/node/variablenode.h
    src/diceparser/validatorlist.h
    src/diceparser/operationcondition.h
    src/diceparser/qmltypesregister.h
    src/diceparser/range.h
    src/diceparser/result/diceresult.h
    src/diceparser/result/result.h
    src/diceparser/result/scalarresult.h
    src/diceparser/result/stringresult.h
    src/diceparser/validator.h
    src/media/image.h
    src/model/playerproxymodel.h    
    src/network/channel.h
    src/network/channellistpanel.h
    src/network/channelmodel.h
    src/network/clientmanager.h
    src/network/connectionaccepter.h
    src/network/connectionprofile.h
    src/network/connectionretrydialog.h
    src/network/heartbeatsender.h
    src/network/ipbanaccepter.h
    src/network/iprangeaccepter.h
    src/network/messagedispatcher.h
    src/network/networklink.h
    src/network/networkmessage.h
    src/network/networkmessagereader.h
    src/network/networkmessagewriter.h
    src/network/networkreceiver.h
    src/network/passwordaccepter.h
    src/network/receiveevent.h
    src/network/rserver.h
    src/network/selectconnectionprofiledialog.h
    src/network/characterdatamodel.h
    src/network/servermanager.h
    src/network/tcpclient.h
    src/network/timeaccepter.h
    src/network/treeitem.h
    src/noteeditor/format_OO_oasis_/FoColorName.h
    src/noteeditor/format_OO_oasis_/GZipReader.h
    src/noteeditor/format_OO_oasis_/GZipWriter.h
    src/noteeditor/format_OO_oasis_/OOFormat.h
    src/noteeditor/format_OO_oasis_/OOReader.h
    src/noteeditor/format_OO_oasis_/XML_Editor.h
    src/noteeditor/src/notecontainer.h
    src/noteeditor/src/textedit.h
    src/preferences/characterstatemodel.h
    src/preferences/dicealiasmodel.h
    src/preferences/palettemodel.h
    src/preferences/preferencesdialog.h
    src/preferences/preferenceslistener.h
    src/preferences/preferencesmanager.h
    src/preferences/rolisteamtheme.h
    src/services/ipchecker.h
    src/services/tipchecker.h
    src/services/updatechecker.h
    src/services/updaterwindow.h
    src/session/sessionitemmodel.h
    src/session/sessiondock.h
    src/session/sessionview.h
    src/sharededitor/codeeditor.h
    src/sharededitor/document.h
    src/sharededitor/enu.h
    src/sharededitor/finddialog.h
    src/sharededitor/findtoolbar.h
    src/sharededitor/markdownhighlighter.h
    src/sharededitor/participantmodel.h
    src/sharededitor/participantspane.h
    src/sharededitor/sharednote.h
    src/sharededitor/sharednotecontainer.h
    src/sharededitor/utilities.h
    src/undoCmd/openmediacontroller.h
    src/undoCmd/addvmapitem.h
    src/undoCmd/changecoloritem.h
    src/undoCmd/changesizevmapitem.h
    src/undoCmd/removemediacontrollercommand.h
    src/undoCmd/deletevmapitem.h
    src/undoCmd/movevmapitem.h
    src/undoCmd/newmediacontroller.h
    src/undoCmd/addfogofwarchangecommand.h
    src/undoCmd/changestackordervmapcommand.h
    src/userlist/playermodel.h
    src/userlist/playerspanel.h
    src/userlist/rolisteammimedata.h
    src/userlist/userlistdelegate.h
    src/userlist/userlistview.h
    src/utils/insertionsortedmap.h
    src/vmap/items/anchoritem.h
    src/vmap/items/characteritem.h
    src/vmap/items/childpointitem.h
    src/vmap/items/ellipsitem.h
    src/vmap/items/griditem.h
    src/vmap/items/highlighteritem.h
    src/vmap/items/imageitem.h
    src/vmap/items/lineitem.h
    src/vmap/items/pathitem.h
    src/vmap/items/rectitem.h
    src/vmap/items/ruleitem.h
    src/vmap/items/sightitem.h
    src/vmap/items/textitem.h
    src/vmap/items/visualitem.h
    src/vmap/controller/ellipsecontroller.h
    src/vmap/controller/characteritemcontroller.h
    src/vmap/controller/linecontroller.h
    src/vmap/controller/rectcontroller.h
    src/vmap/controller/textcontroller.h
    src/vmap/controller/gridcontroller.h
    src/vmap/controller/imagecontroller.h
    src/vmap/controller/pathcontroller.h
    src/vmap/controller/sightcontroller.h
    src/vmap/controller/visualitemcontroller.h
    src/vmap/manager/rectcontrollermanager.h
    src/vmap/manager/imagecontrollermanager.h
    src/vmap/manager/ellipscontrollermanager.h
    src/vmap/manager/linecontrollermanager.h
    src/vmap/manager/visualitemcontrollermanager.h
    src/vmap/manager/pathcontrollermanager.h
    src/vmap/manager/textcontrollermanager.h
    src/vmap/manager/characteritemcontrollermanager.h
    src/vmap/patternmodel.h
    src/vmap/rgraphicsview.h
    src/vmap/vcolorselector.h
    src/vmap/vcolortablechooser.h
    src/vmap/vmap.h
    src/vmap/vmapframe.h
    src/vmap/vmaptoolbar.h
    src/vmap/vmapwizzarddialog.h
    src/vmap/vtoolbar.h
    src/webview/webview.h
    src/widgets/MRichTextEditor/mrichtextedit.h
    src/widgets/MRichTextEditor/mtextedit.h
    src/widgets/aboutrolisteam.h
    src/widgets/centeredcheckbox.h
    src/widgets/circledisplayer.h
    src/widgets/colorselector.h
    src/widgets/delegate.h
    src/widgets/diameterselector.h
    src/widgets/filedirchooser.h
    src/widgets/filepathdelegateitem.h
    src/widgets/flowlayout.h
    src/widgets/notificationzone.h
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkmodel.h
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.h
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.h
    src/widgets/gmtoolbox/NpcMaker/genericmodel.h
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.h
    src/widgets/gmtoolbox/UnitConvertor/convertor.h
    src/widgets/gmtoolbox/UnitConvertor/convertoroperator.h
    src/widgets/gmtoolbox/UnitConvertor/customrulemodel.h
    src/widgets/gmtoolbox/UnitConvertor/unit.h
    src/widgets/gmtoolbox/UnitConvertor/unitmodel.h
    src/widgets/gmtoolbox/gamemastertool.h
    src/widgets/workspace.h
    src/widgets/keygeneratordialog.h
    src/widgets/onlinepicturedialog.h
    src/widgets/overlay.h
    src/updater/sharednotecontrollerupdater.h
    src/widgets/persondialog.h
    src/widgets/realslider.h
    src/widgets/shortcuteditordialog.h
    src/widgets/tipofdayviewer.h
    src/worker/messagehelper.h
    src/worker/playermessagehelper.h
    src/worker/vectorialmapmessagehelper.h
    src/worker/modelhelper.h
    src/worker/iohelper.h
    src/updater/vmapupdater.h
    src/worker/convertionhelper.h
    src/updater/rectcontrollerupdater.h
    src/updater/instantmessagingupdater.h
    src/updater/vmapitemcontrollerupdater.h
    src/updater/ellipsecontrollerupdater.h
    src/updater/textcontrollerupdater.h
    src/updater/linecontrollerupdater.h
    src/updater/imagecontrollerupdater.h
    src/updater/pathcontrollerupdater.h
    src/updater/characteritemupdater.h
    src/updater/charactersheetupdater.h
    )


set(SOURCES
    src/controller/gamecontroller.cpp
    src/controller/resourcescontroller.cpp
    src/controller/networkcontroller.cpp
    src/controller/preferencescontroller.cpp
    src/controller/view_controller/mediacontrollerbase.cpp
    src/controller/playercontroller.cpp
    src/controller/contentcontroller.cpp
    src/controller/instantmessagingcontroller.cpp
    src/controller/media_controller/mediamanagerbase.cpp
    src/controller/media_controller/imagemediacontroller.cpp
    src/controller/media_controller/charactersheetmediacontroller.cpp
    src/controller/media_controller/vectorialmapmediacontroller.cpp
    src/controller/media_controller/webpagemediacontroller.cpp
    src/controller/media_controller/sharednotemediacontroller.cpp
    src/controller/media_controller/notemediacontroller.cpp
    src/controller/view_controller/notecontroller.cpp
    src/controller/view_controller/vectorialmapcontroller.cpp
    src/controller/view_controller/sharednotecontroller.cpp
    src/controller/view_controller/webpagecontroller.cpp
    src/controller/view_controller/imagecontroller.cpp
    src/controller/view_controller/charactersheetcontroller.cpp
    src/worker/iohelper.cpp
    src/undoCmd/addlocalcharactercommand.cpp
    src/undoCmd/removelocalcharactercommand.cpp
    src/common/controller/theme.cpp
    src/model/profilemodel.cpp
    src/model/thememodel.cpp
    src/model/charactermodel.cpp
    src/audio/audioPlayer.cpp
    src/audio/musicmodel.cpp
    src/audio/playerwidget.cpp
    src/qmlchat/textwritercontroller.cpp
    src/qmlchat/chatroom.cpp
    src/qmlchat/messagemodel.cpp
    src/qmlchat/dicemessage.cpp
    src/qmlchat/filteredplayermodel.cpp
    src/qmlchat/messagefactory.cpp
    src/qmlchat/filterinstantmessagingmodel.cpp
    src/qmlchat/chatroomsplittermodel.cpp
    src/qmlchat/instantmessagingview.cpp
    src/charactersheet/charactersheet.cpp
    src/charactersheet/charactersheetitem.cpp
    src/charactersheet/charactersheetmodel.cpp
    src/media/charactersheetwindow.cpp
    src/charactersheet/csitem.cpp
    src/charactersheet/field.cpp
    src/charactersheet/formula/formulamanager.cpp
    src/charactersheet/formula/nodes/formulanode.cpp
    src/charactersheet/formula/nodes/operator.cpp
    src/charactersheet/formula/nodes/parenthesesfnode.cpp
    src/charactersheet/formula/nodes/scalaroperatorfnode.cpp
    src/charactersheet/formula/nodes/startnode.cpp
    src/charactersheet/formula/nodes/valuefnode.cpp
    src/charactersheet/formula/parsingtoolformula.cpp
    src/charactersheet/imagemodel.cpp
    src/charactersheet/qqmlhelpers.cpp
    src/charactersheet/rolisteamimageprovider.cpp
    src/charactersheet/section.cpp
    src/charactersheet/sheetwidget.cpp
    src/charactersheet/tablefield.cpp
    src/qmlchat/instantmessagingmodel.cpp
    src/qmlchat/messageinterface.cpp
    src/qmlchat/textmessage.cpp
    src/qmlchat/avatarprovider.cpp
    src/qmlchat/chatroomfactory.cpp
    src/common/controller/logcontroller.cpp
    src/common/controller/remotelogcontroller.cpp
    src/common/task/uploadlogtoserver.cpp
    src/common/widgets/colorbutton.cpp
    src/common/widgets/logpanel.cpp
    src/data/features.cpp
    src/data/chapter.cpp
    src/data/character.cpp
    src/data/characterstate.cpp
    src/data/charactervision.cpp
    src/data/cleveruri.cpp
    src/data/cleverurimimedata.cpp
    src/data/diceshortcut.cpp
    src/data/localpersonmodel.cpp
    src/data/mediacontainer.cpp
    src/data/person.cpp
    src/data/player.cpp
    src/data/resourcesnode.cpp
    src/data/shortcutmodel.cpp
    src/data/shortcutvisitor.cpp
    src/diceparser/booleancondition.cpp
    src/diceparser/compositevalidator.cpp
    src/diceparser/dicealias.cpp
    src/diceparser/diceparser.cpp
    src/diceparser/diceroller.cpp
    src/diceparser/die.cpp
    src/diceparser/highlightdice.cpp
    src/diceparser/node/bind.cpp
    src/diceparser/node/repeaternode.cpp
    src/diceparser/node/allsamenode.cpp
    src/diceparser/node/countexecutenode.cpp
    src/diceparser/node/dicerollernode.cpp
    src/diceparser/node/executionnode.cpp
    src/diceparser/node/explodedicenode.cpp
    src/diceparser/node/filternode.cpp
    src/diceparser/node/forloopnode.cpp
    src/diceparser/node/groupnode.cpp
    src/diceparser/node/helpnode.cpp
    src/diceparser/node/ifnode.cpp
    src/diceparser/node/jumpbackwardnode.cpp
    src/diceparser/node/keepdiceexecnode.cpp
    src/diceparser/node/listaliasnode.cpp
    src/diceparser/node/listsetrollnode.cpp
    src/diceparser/node/mergenode.cpp
    src/diceparser/node/numbernode.cpp
    src/diceparser/node/occurencecountnode.cpp
    src/diceparser/node/paintnode.cpp
    src/diceparser/node/parenthesesnode.cpp
    src/diceparser/node/rerolldicenode.cpp
    src/diceparser/node/scalaroperatornode.cpp
    src/diceparser/node/sortresult.cpp
    src/diceparser/node/splitnode.cpp
    src/diceparser/node/startingnode.cpp
    src/diceparser/node/stringnode.cpp
    src/diceparser/node/uniquenode.cpp
    src/diceparser/node/valueslistnode.cpp
    src/diceparser/node/variablenode.cpp
    src/diceparser/operationcondition.cpp
    src/diceparser/parsingtoolbox.cpp
    src/diceparser/qmltypesregister.cpp
    src/diceparser/range.cpp
    src/diceparser/result/diceresult.cpp
    src/diceparser/result/result.cpp
    src/diceparser/result/scalarresult.cpp
    src/diceparser/result/stringresult.cpp
    src/diceparser/validator.cpp
    src/diceparser/validatorlist.cpp
    src/media/image.cpp
    src/model/playerproxymodel.cpp
    src/network/channel.cpp
    src/network/channellistpanel.cpp
    src/network/channelmodel.cpp
    src/network/clientmanager.cpp
    src/network/connectionaccepter.cpp
    src/network/connectionprofile.cpp
    src/network/characterdatamodel.cpp
    src/network/connectionretrydialog.cpp
    src/network/heartbeatsender.cpp
    src/network/ipbanaccepter.cpp
    src/network/iprangeaccepter.cpp
    src/network/messagedispatcher.cpp
    src/network/networklink.cpp
    src/network/networkmessage.cpp
    src/network/networkmessagereader.cpp
    src/network/networkmessagewriter.cpp
    src/network/passwordaccepter.cpp
    src/network/receiveevent.cpp
    src/network/rserver.cpp
    src/network/selectconnectionprofiledialog.cpp
    src/network/servermanager.cpp
    src/network/tcpclient.cpp
    src/network/timeaccepter.cpp
    src/network/treeitem.cpp
    src/noteeditor/format_OO_oasis_/FoColorName.cpp
    src/noteeditor/format_OO_oasis_/GZip.cpp
    src/noteeditor/format_OO_oasis_/OOFormat.cpp
    src/noteeditor/format_OO_oasis_/OOReader.cpp
    src/noteeditor/format_OO_oasis_/XML_Editor.cpp
    src/noteeditor/src/notecontainer.cpp
    src/noteeditor/src/textedit.cpp
    src/preferences/characterstatemodel.cpp
    src/preferences/dicealiasmodel.cpp
    src/preferences/palettemodel.cpp
    src/preferences/preferencesdialog.cpp
    src/preferences/preferenceslistener.cpp
    src/preferences/preferencesmanager.cpp
    src/preferences/rolisteamtheme.cpp
    src/services/ipchecker.cpp
    src/services/tipchecker.cpp
    src/services/updatechecker.cpp
    src/services/updaterwindow.cpp
    src/session/sessionitemmodel.cpp
    src/session/sessiondock.cpp
    src/session/sessionview.cpp
    src/sharededitor/codeeditor.cpp
    src/sharededitor/document.cpp
    src/sharededitor/finddialog.cpp
    src/sharededitor/findtoolbar.cpp
    src/sharededitor/markdownhighlighter.cpp
    src/sharededitor/participantspane.cpp
    src/sharededitor/participantmodel.cpp
    src/sharededitor/sharednote.cpp
    src/sharededitor/sharednotecontainer.cpp
    src/sharededitor/utilities.cpp
    src/undoCmd/openmediacontroller.cpp
    src/undoCmd/addvmapitem.cpp
    src/undoCmd/changecoloritem.cpp
    src/undoCmd/changesizevmapitem.cpp
    src/undoCmd/removemediacontrollercommand.cpp
    src/undoCmd/newmediacontroller.cpp
    src/undoCmd/deletevmapitem.cpp
    src/undoCmd/movevmapitem.cpp
    src/undoCmd/addfogofwarchangecommand.cpp
    src/undoCmd/changestackordervmapcommand.cpp
    src/userlist/playermodel.cpp
    src/userlist/playerspanel.cpp
    src/userlist/rolisteammimedata.cpp
    src/userlist/userlistdelegate.cpp
    src/userlist/userlistview.cpp
    src/vmap/items/anchoritem.cpp
    src/updater/sharednotecontrollerupdater.cpp
    src/vmap/items/characteritem.cpp
    src/vmap/items/childpointitem.cpp
    src/vmap/items/ellipsitem.cpp
    src/vmap/items/griditem.cpp
    src/vmap/items/highlighteritem.cpp
    src/vmap/items/imageitem.cpp
    src/vmap/items/lineitem.cpp
    src/vmap/items/pathitem.cpp
    src/vmap/items/rectitem.cpp
    src/vmap/items/ruleitem.cpp
    src/vmap/items/sightitem.cpp
    src/vmap/items/textitem.cpp
    src/vmap/items/visualitem.cpp
    src/vmap/manager/linecontrollermanager.cpp
    src/vmap/manager/ellipscontrollermanager.cpp
    src/vmap/manager/visualitemcontrollermanager.cpp
    src/vmap/manager/rectcontrollermanager.cpp
    src/vmap/manager/imagecontrollermanager.cpp
    src/vmap/manager/pathcontrollermanager.cpp
    src/vmap/manager/textcontrollermanager.cpp
    src/vmap/manager/characteritemcontrollermanager.cpp
    src/vmap/controller/ellipsecontroller.cpp
    src/vmap/controller/characteritemcontroller.cpp
    src/vmap/controller/linecontroller.cpp
    src/vmap/controller/rectcontroller.cpp
    src/vmap/controller/textcontroller.cpp
    src/vmap/controller/gridcontroller.cpp
    src/vmap/controller/imagecontroller.cpp
    src/vmap/controller/pathcontroller.cpp
    src/vmap/controller/sightcontroller.cpp
    src/vmap/controller/visualitemcontroller.cpp
    src/vmap/patternmodel.cpp
    src/vmap/rgraphicsview.cpp
    src/vmap/vcolorselector.cpp
    src/vmap/vcolortablechooser.cpp
    src/vmap/vmap.cpp
    src/vmap/vmapframe.cpp
    src/vmap/vmaptoolbar.cpp
    src/vmap/vmapwizzarddialog.cpp
    src/vmap/vtoolbar.cpp
    src/webview/webview.cpp
    src/widgets/MRichTextEditor/mrichtextedit.cpp
    src/widgets/MRichTextEditor/mtextedit.cpp
    src/widgets/aboutrolisteam.cpp
    src/widgets/centeredcheckbox.cpp
    src/widgets/circledisplayer.cpp
    src/widgets/colorselector.cpp
    src/widgets/delegate.cpp
    src/widgets/diameterselector.cpp
    src/widgets/filedirchooser.cpp
    src/widgets/filepathdelegateitem.cpp
    src/widgets/notificationzone.cpp
    src/widgets/flowlayout.cpp
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkmodel.cpp
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.cpp
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.cpp
    src/widgets/gmtoolbox/NpcMaker/genericmodel.cpp
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.cpp
    src/widgets/gmtoolbox/UnitConvertor/convertor.cpp
    src/widgets/gmtoolbox/UnitConvertor/convertoroperator.cpp
    src/widgets/gmtoolbox/UnitConvertor/customrulemodel.cpp
    src/widgets/gmtoolbox/UnitConvertor/unit.cpp
    src/widgets/gmtoolbox/UnitConvertor/unitmodel.cpp
    src/widgets/gmtoolbox/gamemastertool.cpp
    src/widgets/workspace.cpp
    src/widgets/keygeneratordialog.cpp
    src/widgets/onlinepicturedialog.cpp
    src/widgets/overlay.cpp
    src/widgets/persondialog.cpp
    src/widgets/realslider.cpp
    src/widgets/shortcuteditordialog.cpp
    src/widgets/tipofdayviewer.cpp
    src/updater/vmapupdater.cpp
    src/updater/rectcontrollerupdater.cpp
    src/updater/vmapitemcontrollerupdater.cpp
    src/updater/instantmessagingupdater.cpp
    src/updater/textcontrollerupdater.cpp
    src/updater/ellipsecontrollerupdater.cpp
    src/updater/linecontrollerupdater.cpp
    src/updater/imagecontrollerupdater.cpp
    src/updater/pathcontrollerupdater.cpp
    src/updater/characteritemupdater.cpp
    src/updater/charactersheetupdater.cpp
    src/worker/messagehelper.cpp
    src/worker/modelhelper.cpp
    src/worker/vectorialmapmessagehelper.cpp
    src/worker/playermessagehelper.cpp
    src/worker/convertionhelper.cpp
    )


set(UI_FILES
    src/preferences/preferencesdialogbox.ui
    src/audio/audiowidget.ui
    src/sharededitor/findtoolbar.ui
    src/sharededitor/preferencesdialog.ui
    src/sharededitor/participantspane.ui
    src/sharededitor/sharednote.ui
    src/sharededitor/document.ui
    src/sharededitor/announcedocumentdialog.ui
    src/sharededitor/finddialog.ui
    src/sharededitor/firstrundialog.ui
    src/sharededitor/connecttodocument.ui
    src/userlist/playerspanel.ui
    src/common/widgets/logpanel.ui
    src/media/charactersheetwindow.ui
    src/webview/webview.ui
    src/widgets/shortcuteditordialog.ui
    src/widgets/keygeneratordialog.ui
    src/widgets/gmtoolbox/UnitConvertor/convertor.ui
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.ui
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.ui
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.ui
    src/widgets/tipofdayviewer.ui
    src/widgets/onlinepicturedialog.ui
    src/widgets/MRichTextEditor/mrichtextedit.ui
    src/widgets/aboutrolisteam.ui
    src/widgets/notificationzone.ui
    src/widgets/persondialog.ui
    src/vmap/vmapwizzarddialog.ui
    src/network/selectconnectionprofiledialog.ui
    src/network/channellistpanel.ui
    src/network/connectionretrydialog.ui
    src/session/sessiondock.ui
    src/qmlchat/instantmessagingview.ui
    src/pdfviewer/pdfviewer.ui
    )


if(Qt5PdfWidgets_FOUND AND ${WITH_PDF})
    message("Link with PDF")
    add_library(core SHARED ${SOURCES} ${HEADERS} ${UI_FILES} ${pdfSource} ${pdfHeader} ${pdfUiFile} src/rolisteamqml.qrc src/noteeditor/src/textedit.qrc)
    target_link_libraries(core PUBLIC  Qt5::Core Qt5::Gui Qt5::Svg Qt5::Widgets Qt5::Network Qt5::Multimedia Qt5::PrintSupport Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::QuickWidgets Qt5::Xml Qt5::WebEngineWidgets Qt5::Concurrent Qt5::PdfWidgets)
else()
    message("Link without PDF")
    add_library(core SHARED ${SOURCES} ${HEADERS} ${UI_FILES} src/rolisteamqml.qrc src/noteeditor/src/textedit.qrc)
    target_link_libraries(core PUBLIC  Qt5::Core Qt5::Gui Qt5::Svg Qt5::Widgets Qt5::Network Qt5::Multimedia Qt5::PrintSupport Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::QuickWidgets Qt5::Xml Qt5::WebEngineWidgets Qt5::Concurrent)
endif()


set(Network_HEADER    
    src/network/channelmodel.h
    src/media/mediatype.h
    src/network/tcpclient.h
    src/network/servermanager.h
    src/network/connectionaccepter.h
    src/network/passwordaccepter.h
    src/network/iprangeaccepter.h
    src/network/ipbanaccepter.h
    src/network/timeaccepter.h
    src/network/channel.h
    src/network/treeitem.h
    src/network/networkmessage.h
    src/network/networkmessagereader.h
    src/network/networkmessagewriter.h
    src/worker/messagehelper.h
    src/network/rserver.h
    src/network/messagedispatcher.h
    src/network/receiveevent.h
    src/data/features.h
    src/data/person.h
    src/data/player.h
    src/data/character.h
    src/data/characterstate.h
    src/data/resourcesnode.h
    src/worker/playermessagehelper.h
    src/common/controller/logcontroller.h)


set(Network_SRC
    src/network/channelmodel.cpp
    src/network/tcpclient.cpp
    src/network/servermanager.cpp
    src/network/connectionaccepter.cpp
    src/network/passwordaccepter.cpp
    src/network/iprangeaccepter.cpp
    src/network/ipbanaccepter.cpp
    src/network/timeaccepter.cpp
    src/network/channel.cpp
    src/network/treeitem.cpp
    src/worker/messagehelper.h
    src/network/networkmessage.cpp
    src/network/networkmessagereader.cpp
    src/network/networkmessagewriter.cpp
    src/network/rserver.cpp
    src/network/messagedispatcher.cpp
    src/network/receiveevent.cpp
    src/data/person.cpp
    src/data/player.cpp
    src/data/features.cpp
    src/data/character.cpp
    src/data/characterstate.cpp
    src/data/resourcesnode.cpp
    src/worker/playermessagehelper.cpp
    src/common/controller/logcontroller.cpp
)

add_library(network SHARED ${Network_SRC} ${Network_HEADER})
set_target_properties(network PROPERTIES COMPILE_DEFINITIONS "UNIT_TEST=1")
target_link_libraries(network PUBLIC Qt5::Core Qt5::Network Qt5::Gui)


install(TARGETS core network
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)
